# WeatherForecast

./: CMakeLists.txt  Documentation.md  README.md  config.json  main.cpp
API/: API_Info.cpp  API_Info.h
ConfigInfo/: ConfigInfo.cpp  ConfigInfo.h
Interface/: Interface.cpp  Interface.h
Parser/: Parser.cpp  Parser.h
Utils/: Utils.cpp  Utils.h
